# untech-editor

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  LICENSE  README.md  THIRDPARTYLIBS.md  TODO  cppcheck-suppressions.txt
resources/: metasprite.qrc  resources.qrc
scripts/: validate-undo-helpers.sh
src/: version.h
src/cli/: argparser.h  untech-compiler.cpp  untech-lz4c.cpp  untech-msc.cpp  untech-png2snes.cpp  untech-png2tileset.cpp  untech-resc.cpp  untech-spriteimporter.cpp  untech-utsi2utms.cpp  untech-write-sfc-checksum.cpp
src/cli/helpers/: commandlineparser.cpp  commandlineparser.h
src/gui/: abstract-editor.cpp  abstract-editor.h  animation-timer.h  aptable.h  background-thread.cpp  background-thread.h  editor-actions-notify-gui.h  editor-actions.h  enums.h  grid-actions.h  imgui-combos.cpp  imgui-combos.h  imgui-drawing.h  imgui-filebrowser.cpp  imgui-filebrowser.h  imgui-u8string.cpp  imgui.cpp  imgui.h  imgui_sdl_opengl3.hpp  item-index.h  key-id.h  list-actions-variant.h  list-actions.h  list-helpers.h  main.cpp  selection.cpp  selection.h  shaders.cpp  shaders.h  splitter.cpp  splitter.h  splitter.hpp  style.cpp  style.h  texture.cpp  texture.h  texture_opengl3.hpp  undostack.cpp  undostack.h  untech-editor.cpp  (+4 more)
src/gui-qt/: abstracteditor.cpp  abstracteditor.h  abstracteditorwidget.cpp  abstracteditorwidget.h  abstractproject.cpp  abstractproject.h  abstractprojectloader.h  abstractresourceitem.cpp  abstractresourceitem.h  abstractresourcelist.cpp  abstractresourcelist.h  common.h  editresourceitemcommand.h  errorlistdock.cpp  errorlistdock.h  errorlistdock.ui  filesystemwatcher.cpp  filesystemwatcher.h  genericpropertieswidget.cpp  genericpropertieswidget.h  genericpropertieswidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project-data-slots.hpp  project.cpp  project.h  resourcestreedock.cpp  resourcestreedock.h  resourcestreedock.ui  resourcestreemodel.cpp  resourcestreemodel.h  resourcevalidationworker.cpp  resourcevalidationworker.h  staticresourcelist.cpp  staticresourcelist.h  tabbar.cpp  tabbar.h  untech-metasprite.cpp  (+2 more)
src/gui-qt/accessor/: abstractaccessors.cpp  abstractaccessors.h  abstractaccessors.hpp  accessor.h  actions.h  gridundohelper.h  idmaplistmodel.cpp  idmaplistmodel.h  idmaplistview.cpp  idmaplistview.h  idmapundohelper.h  listaccessortabledock.cpp  listaccessortabledock.h  listaccessortablemanager.cpp  listaccessortablemanager.h  listaccessortableview.cpp  listaccessortableview.h  listactionhelper.h  listactions.cpp  listactions.h  listandmultipleselectionundohelper.h  listundohelper.h  movemultipleundohelper.h  multilistactions.cpp  multilistactions.h  multipleselectedindexeshelper.h  multipleselectiontabledock.cpp  multipleselectiontabledock.h  multipleselectiontableview.cpp  multipleselectiontableview.h  namedlistactions.cpp  namedlistactions.h  namedlistdock.cpp  namedlistdock.h  namedlistmodel.cpp  namedlistmodel.h  namedlistundohelper.h  namedlistview.cpp  namedlistview.h  nestedlistaccessors.cpp  (+7 more)
src/gui-qt/common/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abstractdocument.cpp  abstractdocument.h  abstractidmaplistmodel.cpp  abstractidmaplistmodel.h  abstractmainwindow.cpp  abstractmainwindow.h  abstractsingledocumentmainwindow.cpp  abstractsingledocumentmainwindow.h  actionhelpers.h  helpers.h  idstringdialog.cpp  idstringdialog.h  idstringvalidator.cpp  idstringvalidator.h  imageboundingrect.hpp  openrecentmenu.cpp  openrecentmenu.h  validatoritemdelegate.cpp  validatoritemdelegate.h
src/gui-qt/entity/: structfields.cpp  structfields.h
src/gui-qt/metasprite/: abstractdocument.cpp  abstractdocument.h  abstractmsdocument.cpp  abstractmsdocument.h  abstractmsresourceitem.cpp  abstractmsresourceitem.h  abstractselection.cpp  abstractselection.h  common.cpp  common.h  framecontentcommands.cpp  framecontentcommands.h  framesetresourcelist.cpp  framesetresourcelist.h  layersettings.cpp  layersettings.h  metaspriteproject.cpp  metaspriteproject.h  metaspriteprojectloader.h  nullframesetresourceitem.cpp  nullframesetresourceitem.h  style.cpp  style.h
src/gui-qt/metatiles/: abstractcursorgraphicsitem.cpp  abstractcursorgraphicsitem.h  erasercursorgraphicsitem.cpp  erasercursorgraphicsitem.h  mtgraphicsscenes.cpp  mtgraphicsscenes.h  mtgridgraphicsitem.cpp  mtgridgraphicsitem.h  stampgraphicsitem.cpp  stampgraphicsitem.h  style.cpp  style.h  tilecursorgraphicsitem.cpp  tilecursorgraphicsitem.h
src/gui-qt/project-settings/: editorwidget.cpp  editorwidget.h  editorwidget.ui  managers.cpp  managers.h  projectsettingscentralwidget.cpp  projectsettingscentralwidget.h  projectsettingscentralwidget.ui  projectsettingseditor.h  projectsettingspropertieswidget.cpp  projectsettingspropertieswidget.h  projectsettingspropertieswidget.ui  projectsettingspropertymanager.cpp  projectsettingspropertymanager.h  projectsettingsresourceitem.cpp  projectsettingsresourceitem.h  resourceitem.cpp  resourceitem.h  undo.cpp
src/gui-qt/resources/: abstracteditor.h  abstractproject.cpp  abstractproject.h  abstractresourceitem.cpp  abstractresourceitem.h  abstractresourcelist.cpp  abstractresourcelist.h  abstractresourcewidget.h  animationtimer.cpp  animationtimer.h  common.h  document.cpp  document.h  dualanimationtimer.cpp  dualanimationtimer.h  editresourceitemcommand.h  errorlistdock.cpp  errorlistdock.h  errorlistdock.ui  genericpropertieswidget.cpp  genericpropertieswidget.h  genericpropertieswidget.ui  invalidimageerror.cpp  invalidimageerror.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resourceproject.cpp  resourceproject.h  resourceprojectloader.h  resourcestreedock.cpp  resourcestreedock.h  resourcestreedock.ui  resourcestreemodel.cpp  tabbar.cpp  (+4 more)
src/gui-wx/: untech-metasprite.cpp  untech-spriteimporter.cpp
src/models/: document.h  enums.h  metasprite.h  sprite-importer.h
src/test-utils/: metasprite-serializer-test.cpp  metatiles-tileset-serializer-test.cpp  project-serializer-test.cpp  resources-file-serializer-test.cpp  serializer-test.cpp  spriteimporter-serializer-test.cpp
(+1206 files in other folders)
